--- a/css/techfolio-theme/sans.css
+++ b/css/techfolio-theme/sans.css
@@ -9,15 +9,15 @@
   --tf-blue1: #076db3;
   --tf-blue2: #1b6fa9;
   --tf-blue3: #2f8ed0;
-  --tf-blue4: #bde3f0;
+  --tf-purple1: #c8c2e2;
   --bs-font-sans-serif: "Open Sans", sans-serif;
   --bs-link-color: var(--tf-blue1);
   --tf-pill-bg: var(--tf-blue3);
   --tf-icon-fill: var(--tf-blue1);
   --tf-icon-hover: var(--tf-blue3);
   --tf-page-bg-color: var(--bs-white);
-  --tf-footer-bg-color: var(--tf-blue4);
-  --tf-projects-bg-color: var(--tf-blue4);
+  --tf-footer-bg-color: var(--tf-purple1);
+  --tf-projects-bg-color: var(--tf-purple1);
 }
 
 h1,h2,h3,h4,h5 {
